stuck in this terrible bug where pages don't change

--- a/src/pages/DigitalEdition/DigitalEdition.css
+++ b/src/pages/DigitalEdition/DigitalEdition.css
@@ -14,6 +14,11 @@
   }
 }
 
+.curPage {
+  max-width: 2em;
+  text-align: center;
+}
+
 .number {
     padding: 2px 7px;
     border-radius: 5px;
@@ -1272,6 +1277,11 @@ tei-normalization {
 }
 
 tei-note[target] {
+  display: block;
+  line-height: 1.5; 
+}
+
+tei-note[id] {
   display: block;
   line-height: 1.5; 
 }
